--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,79 +8,59 @@
 .container{
   width:500px;
   height:500px;
-  position:relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:20px;
+  background-color: black;
 }
 
 .ball{
-  position: absolute;
-  width:100px;
-  height:100px;
-  top:0;
-  left:0;
-  background-color: green;
-  border-radius:50%;
+  display:inline-block;
+  width:20px;
+  height:20px;
   animation-name: roller;
-  animation-duration: 4s;
-  animation-iteration-count: 3;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  transition: all ease-in-out;
 }
 .ball1{
-  animation-delay: 0;
+  animation-delay: 1s;
+  background-color: rgb(24, 199, 123);
 }
 .ball2{
-  animation-delay: 1s;
+  animation-delay: 1.2s;
+  background-color: rgb(24, 94, 199);
+
 }
 .ball3{
-  animation-delay: 2s;
+  animation-delay:1.4s;
+  background-color: rgb(199, 199, 24);
+
 }
 .ball4{
-  animation-delay: 3s;
+  animation-delay: 1.6;
+  background-color: rgb(199, 100, 24);
+
+}
+.ball5{
+  animation-delay: 1.8s;
+  background-color: rgb(91, 24, 199);
 }
 
 @keyframes roller {
   0% {
       transform: translate(0, 0);
   }
-  20% {
-      transform: translate(200px, 0px);
-      background-color: red;
-  }
-  30% {
-      transform: translate(400px, 0px);
-      background-color: rgb(121, 0, 0);
-  }
-  40% {
-      transform: translate(400px, 200px);
-      background-color: yellow;
-  }
   50% {
-      transform: translate(400px, 400px);
-      background-color: rgb(69, 136, 21);
+      transform: translate(0, 30px);
   }
-  60% {
-      transform: translate(200px, 400px);
-      background-color: rgb(0, 255, 94);
+  100% {
+      transform: translate(0, 0);
   }
-  70% {
-      transform: translate(0px, 400px);
-      background-color: rgb(10, 32, 106);
-  }
-  80% {
-      transform: translate(0px, 00px);
-      background-color: rgb(35, 177, 220);
-  }
-  90% {
-      transform: translate(0px, 0px);
-      background-color: rgb(29, 29, 58);
-  }
-  100%{
-    transform: translate(0px, 0px);
-    background-color: rgb(58, 29, 29);
+  
 
-  }
+  
 }
 
-.ball:hover{
-  animation-play-state:paused;
-  cursor: pointer;
-}
 
